--- a/api/pom.xml
+++ b/api/pom.xml
@@ -33,11 +33,17 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <!--   MongoDB Depenedecies     -->
 
+        <!--   MongoDB Depenedecies     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
+        <!-- Spring Boot Starter Validation includes the necessary validation dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
 
@@ -80,6 +86,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
 
